# openclaw-install

./: .gitignore  OpenClaw 一键安装版 产品需求文档（PRD）V1.0.md  OpenClaw 职场一键版 产品需求文档（PRD）.md  OpenClaw 职场一键版 产品需求文档（PRD）V1.0.md  PROGRESS.md  README.md  index.html  package-lock.json  package.json  run.json  vite.config.ts
.github/workflows/: build-windows.yml
resources/openclaw/: config.yaml.example
src/: App.vue  components.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/nsis/: extra.nsh
src-tauri/src/: detectors.rs  fixes.rs  lib.rs  main.rs  telemetry.rs  wrappers.rs
src/router/: index.ts
src/stores/: config.ts  health.ts  openclaw.ts
src/styles/: main.css
src/views/: ConfigCenterView.vue  DashboardView.vue  FunctionManageView.vue  HealthCenterView.vue  HelpView.vue  InstallerView.vue
