[package]
name = "openclaw-workplace"
version = "0.8.2"
description = "OpenClaw 职场一键版 - 永久免费、一键安装的OpenClaw整合包"
authors = ["OpenClaw Workplace Team"]
edition = "2021"

[lib]
name = "openclaw_workplace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
sysinfo = "0.33"
native-dialog = "0.7"
directories = "6"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
parking_lot = "0.12"
serde_yaml_ng = "0.10"
